feat: 에러에 대한 테스트 추가